# ETF-ENGINE-V2

./: .env.example  .gitignore  README.md  READY_FOR_GITHUB.md  VALIDATION_REPORT.md  VALIDATION_REPORT_DETAILED.md  pyproject.toml  test_single_etf.py
.github/workflows/: daily.yml  weekly.yml
data/normalized/holdings/: TW-00400A.json  TW-0051.json  TW-0052.json  TW-0055.json  TW-0056.json  TW-0057.json  TW-006201.json  TW-006203.json  TW-006204.json  TW-006208.json  TW-00646.json  TW-00662.json  TW-00692.json  TW-00701.json  TW-00702.json  TW-00713.json  TW-00730.json  TW-00731.json  TW-00757.json  TW-00770.json  TW-00830.json  TW-00861.json  TW-00878.json  TW-00881.json  TW-00891.json  TW-00892.json  TW-00893.json  TW-00894.json  TW-00895.json  (+121 more)
data/public/: classifications.json  etfs.json  holdings_index.json  latest_metrics.json  manifest.json  overlap_index.json
data/seed/: classifications.json  entities.json  metric_overrides.json  pipeline.json  translations_zh.json
data/state/: last_run.json
docs/: ARCHITECTURE.md  MIGRATION.md  US_AI_ETF.md  US_ETF.md  V2.5_MIGRATION.md
legacy/: ETFEngine_main.py  ETFEngine_main_yf.py  data_fetcher.py  etf.php
scripts/: apply_version.py  rebuild_all.sh
src/etf_engine/: cli.py  models.py  pipeline.py  repository.py  settings.py  validation.py
src/etf_engine_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_holdings.py  test_metrics.py  test_openapi_normalize.py  test_overlap.py  test_seed.py  test_v25_holdings.py  test_v25_openapi.py
wordpress/: etf-engine-v2.php
(+1922 files in other folders)
