[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-engine-v2"
version = "2.5.0"
description = "ETF data pipeline for Taiwan and US ETFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "requests>=2.32,<3",
  "yfinance>=0.2.54,<1",
  "pydantic>=2.8,<3",
  "pyarrow>=17,<22",
  "tenacity>=9,<10",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.8,<1"]

[project.scripts]
etf-engine = "etf_engine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
